--- a/TypingTest.html
+++ b/TypingTest.html
@@ -27,12 +27,21 @@
       background-color:#32c6d9;
     }
     .button{
-      padding: 10px 20px;
+      padding: 10px 30px;
       border-radius:20px;
       box-shadow:0 0 1px rgba(0,0,0,0.2);
       border:5px solid #2980b9;
-      font-size:1rem;
+      font-size:1.2rem;
       background:#ecf0f1;
+      font-family:"Bookman Old Style";
+    }
+    textarea{
+      background-color:#444;
+      box-shadow:0 0 1px rgba(0,0,0,0.5);
+      border-radius:10px 10px 0 0;
+      border:20px solid#34495e;
+      color:white;
+      font-size:1.3rem;
     }
    
    </style>
@@ -46,7 +55,7 @@
     <h2 class="words">
     
     </h2><br>
-    <center><textarea cols="100" rows="15"></textarea></center>
+    <center><textarea cols="100" rows="15" placeholder="Lets Get It!"></textarea></center>
     <button class="button">
     Start
     </button>
